# knyaz_game

./: CMakeLists.txt  run.sh
config/: CMakeLists.txt  config.cpp  config.h
src/: CMakeLists.txt  main.cpp  types.h
src/CommonElements/: CommonElements.cpp
src/Models/GameState/: CMakeLists.txt  GameState.h
src/Models/Knyaz/: CMakeLists.txt  Knyaz.h
src/Models/MainMenu/: CMakeLists.txt  MainMenu.cpp  MainMenu.h
src/boss/: bossType.cpp  bossType.h  initBoss.cpp  initBoss.h
src/globals/: CMakeLists.txt  globals.cpp  globals.h
src/globals/AnimatedObj/: AnimatedObj.cpp  AnimatedObj.h  AnimationData.h
src/globals/boss/meet/: meetBoss.cpp  meetBoss.h
src/globals/bossBottles/: bossBottles.cpp  bossBottles.h
src/globals/bottle/: bottle.cpp  bottle.h
src/globals/mapEnemys/: enemysDamage.cpp  enemysDamage.h  mapEnemys.cpp  mapEnemys.h
src/globals/mapEnemys/Enemy/: Enemy.cpp  Enemy.h
src/globals/mapObjs/: mapObjs.cpp  mapObjs.h
src/globals/mapObjs/gameEntity/: gameEntity.cpp  gameEntity.h
src/globals/mapPortals/: Portal.h  PortalParam.h  gameEndPortal.cpp  gameEndPortal.h  mapPortals.cpp  mapPortals.h
src/globals/tpEntity/: tpEntity.cpp  tpEntity.h
src/globals/viewport/: viewport.cpp  viewport.h
src/kernel/drawer/: redraw.cpp  redraw.h
src/kernel/drawer/BG/: DrawerBG.cpp  DrawerBG.h
src/kernel/drawer/Game/: DrawerGame.cpp  DrawerGame.h
src/kernel/drawer/MapEnemys/: DrawerMapEnemys.cpp  DrawerMapEnemys.h
src/kernel/drawer/MapObjs/: DrawerMapObjs.cpp  DrawerMapObjs.h
src/kernel/drawer/Menu/: DrawerMenu.cpp  DrawerMenu.h
src/kernel/drawer/Porals/: DrawerPortals.cpp  DrawerPortals.h
src/kernel/drawer/UI/: DrawerUI.cpp  DrawerUI.h
src/kernel/polling/: eventsPolling.cpp  eventsPolling.h
src/kernel/updater/: update.cpp  update.h
src/kernel/updater/game/: UpdateGame.cpp  UpdateGame.h
src/kernel/updater/loadScreen/: UpdaterLoadScreen.cpp  UpdaterLoadScreen.h
src/kernel/updater/mainMenu/: UpdaterMainMenu.cpp  UpdaterMainMenu.h
src/knyaz/: CMakeLists.txt  knyaz.cpp  knyaz.h
src/knyaz/eventsHandler/: eventsHandler.cpp  eventsHandler.h
src/knyaz/eventsHandler/keyboard/: keyboardHandler.cpp  keyboardHandler.h
src/knyaz/eventsHandler/mouse/: mouseHandler.cpp  mouseHandler.h
src/knyaz/eventsHandler/mouse/left/: left.cpp  left.h
src/knyaz/eventsHandler/mouse/right/: right.cpp  right.h
src/knyaz/move/: move.cpp  move.h
src/knyaz/move/collisionChecker/: checker.cpp  checker.h
src/knyaz/move/falling/: falling.cpp  falling.h
src/knyaz/move/horizontal/: horizontal.cpp  horizontal.h
src/knyaz/move/vertical/: vertical.cpp  vertical.h
src/knyaz/state/: state.cpp  state.h
src/resources/: CMakeLists.txt  resources.cpp  resources.h
src/resources/BG/: BG.cpp  BG.h
src/resources/animations/: animations.cpp  animations.h
src/resources/animations/boss/: boss.cpp  boss.h
src/resources/font/: font.cpp  font.h
src/resources/objs/: objs.cpp  objs.h
src/resources/sounds/fx/bottle/: bottle.h  bottleFX.cpp  bottleFX.h
src/resources/sounds/fx/fight/: fight.cpp  fight.h
src/resources/sounds/fx/landing/: knyazLandingFX.cpp  knyazLandingFX.h
src/resources/sounds/fx/rage/: rage.cpp  rage.h
src/resources/sounds/fx/run/: knyazRunFX.cpp  knyazRunFX.h
src/resources/sounds/fx/tp/: tp.cpp  tp.h
src/resources/sounds/fx/utils/: FX.cpp  FX.h
src/resources/sounds/fx/win/: win.cpp  win.h
src/resources/sounds/fx/wind/: wind.cpp  wind.h
src/resources/sounds/gameMusic/: music.cpp  music.h
src/resources/ui/: ui.cpp  ui.h  uiStruct.h
src/ui/: CMakeLists.txt  ui.cpp  ui.h
src/ui/gameEnd/: gameEnd.cpp  gameEnd.h
src/ui/helpMenu/: helpMenu.cpp  helpMenu.h
src/ui/loadScreen/: loadScreen.cpp  loadScreen.h
src/ui/mainMenu/: mainMenu.cpp  mainMenu.h  mainMenuStruct.h
src/ui/utils/: deathEnemys.cpp  deathEnemys.h  scaleToScreen.cpp  scaleToScreen.h  text.cpp  text.h
